exports[`Topbar component should be rendered correctly according the viewName 1`] = `
<div
  className="pho-content-header">
  <h2
    className="pho-content-title">
    Photos
  </h2>
  <withRouter(_translate)
    viewName="photos" />
</div>
`;

exports[`Topbar component should be rendered correctly if viewName is albumContent 1`] = `
<div
  className="pho-content-header">
  <div
    className="pho-content-album-previous"
    onClick={[Function]}
    role="button" />
  <h2
    className="pho-content-title" />
  <withRouter(_translate)
    viewName="albumContent" />
</div>
`;
